Updated magic trick options

--- a/app/views/magical-powers.html
+++ b/app/views/magical-powers.html
@@ -43,8 +43,8 @@
               text: "I disappeared the cat"
             },
             {
-              value: "northern-ireland",
-              text: "Northern Ireland"
+              value: "no powers",
+              text: "I haven't done anything yet"
             }
           ]
         }) }}
