Added check answers page and success page

--- a/app/views/magical-powers.html
+++ b/app/views/magical-powers.html
@@ -29,21 +29,22 @@
           hint: {
             text: 'This is important.'
           },
+          value: data.magicTricks,
           items: [
             {
-              value: "Neighbour in half",
+              value: "I sawed my neighbour in half",
               text: "I sawed my neighbour in half"
             },
             {
-              value: "Levitated granny",
+              value: "I levitated my granny",
               text: "I levitated my granny"
             },
             {
-              value: "Disappeared the cat",
+              value: "I disappeared the cat",
               text: "I disappeared the cat"
             },
             {
-              value: "no powers",
+              value: "I haven't done anything yet",
               text: "I haven't done anything yet"
             }
           ]
