--- a/app/views/start-page.html
+++ b/app/views/start-page.html
@@ -32,7 +32,7 @@
       <p>Use this service to order your magical power test.</p>
      
       {% set insetTextHtml %}
-        <p>If you have magical symptoms, have your recently levtiated your granny you may need support <a href="#">need help?</a>.</p>
+        <p>If you have magical symptoms, you need to take a test </a>.</p>
       {% endset %}
 
       {{ insetText({
