--- a/app/views/symptoms.html
+++ b/app/views/symptoms.html
@@ -15,13 +15,13 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <form action="/form-handler" method="post" novalidate>
+      <form action="/check-answers" method="post" novalidate>
 
         {% from "textarea/macro.njk" import textarea %}
 
           {{ characterCount({
-            name: "example",
-            id: "example",
+            name: "Symptoms",
+            id: "Symptoms",
             maxlength: 200,
             label: {
               text: "Can you provide more details about your 'so-called' magical powers?",
@@ -30,7 +30,8 @@
             },
             hint: {
               text: "For example, are you any good at card tricks?"
-            }
+            },
+            value: data.Symptoms
           }) }}
 
         {{ button({
