--- a/app/views/magical-powers.html
+++ b/app/views/magical-powers.html
@@ -15,7 +15,7 @@
 {% block content %}
   <div class="nhsuk-grid-row">
     <div class="nhsuk-grid-column-two-thirds">
-      <form action="/symptoms" method="post" novalidate>
+      <form action="/magical-powers-answers" method="post" novalidate>
 
         {{ radios({
           name: "magicTricks",
